[package]
name = "dumpspace-api"
version = "0.2.0"
edition = "2024"
description = "A simple library for interacting with Spuckwaffel's Dumpspace website."
license = "MIT"

[dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
