[package]
name = "dumpspace-api"
version = "1.0.0"
edition = "2024"
description = "A simple library for interacting with Spuckwaffel's Dumpspace website."
license = "MIT"
readme = "RUST_README.md"
repository = "https://github.com/B1Fr0st/dumpspace-api"

[dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
